--- a/08-power_effect_size.Rmd
+++ b/08-power_effect_size.Rmd
@@ -316,7 +316,7 @@ d_critical = t_critical * sqrt((1/n1) + (1/n2))
 print(d_critical)
 ```
 
-This indicates that with a sample size of 298 per group that only $d$-values greater than $d$ = 0.135 will be significant. 
+This indicates that with a sample size of 298 per group that only independent groups $d$-values greater than $d$ = 0.135 will be significant. 
 
 ## Repeated Measures $t$-test
 
@@ -587,7 +587,7 @@ d_critical <- t_critical * sqrt(1/n)
 print(d_critical)
 ```
 
-This indicates that with a sample size of 298 that only $d$-values greater than $d$ = 0.10 (rounded) will be significant. 
+This indicates that with a sample size of 298 that only repeated measures $d$-values greater than $d$ = 0.10 (rounded) will be significant. 
 
 
 
